<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zouqi.W_login" >

    <EditText
        android:id="@+id/W_log_editname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:hint ="@string/loadtishi1"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/W_log_editpasswd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/W_log_editname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
         android:hint ="@string/loadtishi2"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/W_log_load"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/W_log_editpasswd"
        android:layout_below="@+id/W_log_editpasswd"
        android:layout_marginTop="48dp"
        android:text="@string/load" />

</RelativeLayout>