<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zouqi.W_register" >

     <EditText
        android:id="@+id/W_reg_editemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="20dip"
        android:layout_marginTop="164dip"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/W_reg_editturepasswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/W_reg_turepasswd"
        android:layout_alignLeft="@+id/W_reg_editmima"
        android:ems="10" />

    <TextView
        android:id="@+id/W_reg_turepasswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/W_reg_passwdtext"
        android:layout_marginTop="30dip"
        android:text="@string/comfirm" />

    <TextView
        android:id="@+id/W_reg_passwdtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/W_reg_textemail"
        android:layout_marginTop="30dip"
        android:text="@string/password" />

    <TextView
        android:id="@+id/W_reg_jiaowuztext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/W_reg_turepasswd"
        android:layout_marginTop="30dip"
        android:text="@string/jiaowuzhanghao" />

    <TextView
        android:id="@+id/W_reg_textjiaowumima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/W_reg_jiaowuztext"
        android:layout_marginTop="30dip"
        android:text="@string/jiaowupassword" />

    <EditText
        android:id="@+id/W_reg_editjiaowu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/W_reg_jiaowuztext"
        android:layout_alignBottom="@+id/W_reg_jiaowuztext"
        android:layout_alignLeft="@+id/W_reg_editturepasswd"
        android:ems="10" />

    <EditText
        android:id="@+id/W_reg_editjiaowumima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/W_reg_textjiaowumima"
        android:layout_alignBottom="@+id/W_reg_textjiaowumima"
        android:layout_alignLeft="@+id/W_reg_editjiaowu"
        android:ems="10" />

    <Button
        android:id="@+id/W_reg_zhuce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/W_reg_editjiaowumima"
        android:layout_marginTop="30dip"
        android:text="Button" />
    
    <ImageButton
        android:id="@+id/W_reg_useriamgephoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:background="#00000000"
        android:src="@android:drawable/alert_dark_frame" />

    <TextView
        android:id="@+id/W_reg_textemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/W_reg_editemail"
        android:layout_alignLeft="@+id/W_reg_passwdtext"
        android:text="@string/email" />

    <EditText
        android:id="@+id/W_reg_editmima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/W_reg_turepasswd"
        android:layout_toRightOf="@+id/W_reg_textemail"
        android:ems="10" />

</RelativeLayout>